# rotate-icon

./: .env.sample  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs
