[package]
name = "rotate-icon"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rotate-icon"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.10.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.2.1"
serde = { version = "1", features = ["derive"] }
chrono = "0.4.19"
chrono-tz = "0.5.3"
openssl-probe = "0.1.2"
jsonway = "2.0.0"