[package]
name = "rotate-icon"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rotate-icon"
path = "src/bin/main.rs"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.3.0"
chrono = "0.4.19"
openssl-probe = "0.1.2"
egg-mode = { git = "https://github.com/uesugi6111/egg-mode.git", branch = "feature/account" }
serde_json = "1.0.59"
once_cell = "1.7.2"
